# shop_drf

./: README.md  docker-compose.yml  pyproject.toml
app/core/: settings.py
server/apps/accounts/: admin.py  managers.py  models.py  serializers.py  urls.py  views.py
server/apps/accounts/migrations/: 0001_initial.py  0002_alter_user_created_at_alter_user_deleted_at_and_more.py  0003_alter_user_deleted_at.py
server/apps/common/: managers.py  models.py  paginations.py  permissions.py  utils.py
server/apps/common/managers/: __init__.py  delete.py  get_or_none.py
server/apps/common/models/: __init__.py  base_model.py  del_model.py
server/apps/profiles/: apps.py  models.py  urls.py  views.py
server/apps/profiles/migrations/: 0001_initial.py  0002_alter_order_delivery_status.py  0003_alter_order_created_at_alter_order_date_delivered_and_more.py
server/apps/profiles/models/: __init__.py  order.py  order_item.py  shipping_address.py
server/apps/profiles/serializers/: __init__.py  profile_serializer.py  shipping_serializer.py
server/apps/profiles/views/: __init__.py  profile.py  shipping.py  shipping_id.py
server/apps/reviews/: models.py  schema_examples.py  serializers.py  urls.py  views.py
server/apps/sellers/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
server/apps/sellers/migrations/: 0001_initial.py  0002_alter_seller_created_at_alter_seller_updated_at.py  0002_alter_seller_website_url.py  0003_alter_seller_user.py
server/apps/shop/: admin.py  filters.py  schema_examples.py  urls.py
server/core/: settings.py  urls.py
(+22 files in other folders)
