[project]
name = "shop-drf"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "load-dotenv>=0.1.0",
    "pillow>=11.2.1",
    "psycopg>=3.2.6",
]

[dependency-groups]
dev = [
    "psycopg[binary]>=3.2.6",
]
